[project]
name = "chain-hello"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "syedshahmirsultan", email = "syedshahmirsultan@gmail.com" }
]
requires-python = ">=3.11"
dependencies = []

[project.scripts]
chain-hello = "chain_hello:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
