[project]
name = "chain-hello"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "syedshahmirsultan", email = "syedshahmirsultan@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "chainlit>=2.4.3",
    "dotenv>=0.9.9",
    "openai-agents>=0.0.6",
]

[project.scripts]
chain-main = "chain_hello:main"
chain-hello = "chain_hello.hello:handle_message"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
